Prevent backgrounding when audio input is active.

If one participant is quiet/muted in a call, the other participants renderer process might get backgrounded, since we only count audible output streams for preventing backgrounding. This results in audio input not being properly processed.

Bug: 745537
Change-Id: I0b58f74b8fba8163056db17c4c66e8947104d5cc
Reviewed-on: https://chromium-review.googlesource.com/633603
Commit-Queue: Max Morin <maxmorin@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498815}
Former-commit-id: b65f4bf201bd2220bab6cf83887e071a714afcee